<resources>
    <string name="app_name">MS Group Security</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MS GROUP SECURITY</string>
    <string name="nav_header_subtitle">Your safety is our priority</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Admin</string>

    <string name="app_version">Version 1.1.9</string>
    <string name="app_about_slogan">MS GROUP Security Services is a dynamic and innovative company committed to providing innovative security solutions to both our clients and candidates.We pride ourselves in providing a full range of Security Management Services and committed to continually improve the contents and quality. Well qualified and experienced professionals are dedicated for the growth and improvement of the security services.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About Us</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About Us</string>
    <string name="menu_message">Messages</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="channel_name">New Help Request</string>
    <string name="channel_description">There is a new help request</string>
    <string name="notification_title">New Help Request</string>
    <string name="notification_description">There is a new help request</string>

    <string name="location_disclosure_header">For our SOS response team to know exactly where to rescue you, you must allow MS GROUP to use your location all the time.</string>
    <string name="location_disclosure_sub_header">MS GROUP will use location in the background so we can pin point you when we have to send SOS response team</string>
    <string name="next_of_kin_detail">Next of kin details:</string>
    <string name="menu_emergency">Emergency numbers</string>

    <string name="adUnitId_test">ca-app-pub-3940256099942544/9214589741</string>
    <string name="adUnitId_live">ca-app-pub-4883562730747584/4411313216</string>
    <string name="menu_website">Web Site</string>
    <string name="menu_payment">Payment</string>


    <string name="text_flutter_wave_public_key">FLWPUBK_TEST-c27b28c39d97de7da1b3023be3461f60-X</string>
    <string name="text_flutter_wave_secret_key">FLWSECK_TEST-ccb2fa2da999d238af5fd31f7e784b46-X</string>
    <string name="text_flutter_wave_encryption_key">FLWSECK_TESTe10e69d67726</string>
    <string name="menu_subscription">subscription</string>
    <string name="title_activity_online_security_maps">Online Security</string>
    <string name="action_online_security">Online Security</string>

    <string name="spinner_prompt">Select Monitor Category</string>

    <string-array name="spinner_items">
        <item>Select</item>
        <item>E-hailing</item>
        <item>Municipal</item>
        <item>Government</item>
        <item>Business Fleet</item>
        <item>Courier</item>
        <item>Personal Use</item>
    </string-array>

</resources>