<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.sos.msgroup.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sos.msgroup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sos.msgroup.ui.about.AboutUsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.sos.msgroup.ui.help_history.HelpHistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_help_history" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sos.msgroup.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>