<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/white"
    tools:context=".ui.about.AboutUsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="@font/asul"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/tv_appLogo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_below="@+id/about_header"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tv_appSlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_appLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/asul"
                android:text="@string/app_about_slogan" />

            <TextView
                android:id="@+id/tvAppSlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_appSlogo"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/asul"
                android:text="Company Reg no. – 2017/242498/07"
                android:textColor="@android:color/holo_red_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/fab_margin"
                android:fontFamily="@font/asul"
                android:text="Current Service Offered :"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Armed and unarmed sercurity officers (All grades)    " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="National Key Point Service Provider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="VIP Protection and Body Guarding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Undercover Security Officers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Armed Monitoring" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Alarm Monitoring" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Armed Response" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="24hr Radio Control Room" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Functions &amp; Event Security" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Crowd or Riot Control" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Polygraphs" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Risk Assessments" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/asul"
                android:text="Security Analysis" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/asul"
        android:text="@string/app_version"
        android:visibility="gone" />

</RelativeLayout>